content/_generated-doc/2.13/config/quarkus-restclient-config-rest-client-config.adoc

:summaryTableId: quarkus-restclient-config-rest-client-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-restclient-config-rest-client-config_configuration]]link:#quarkus-restclient-config-rest-client-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.url]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.url[quarkus.rest-client."config-key".url]`

[.description]
--
The base URL to use for this service. This property or the `uri` property is considered required, unless the `baseUri` attribute is configured in the `@RegisterRestClient` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.uri]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.uri[quarkus.rest-client."config-key".uri]`

[.description]
--
The base URI to use for this service. This property or the `url` property is considered required, unless the `baseUri` attribute is configured in the `@RegisterRestClient` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__URI+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.scope]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.scope[quarkus.rest-client."config-key".scope]`

[.description]
--
The CDI scope to use for injection. This property can contain either a fully qualified class name of a CDI scope annotation (such as "javax.enterprise.context.ApplicationScoped") or its simple name (such as "ApplicationScoped").

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__SCOPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.providers]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.providers[quarkus.rest-client."config-key".providers]`

[.description]
--
Map where keys are fully-qualified provider classnames to include in the client, and values are their integer priorities. The equivalent of the `@RegisterProvider` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROVIDERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROVIDERS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.connect-timeout]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.connect-timeout[quarkus.rest-client."config-key".connect-timeout]`

[.description]
--
Timeout specified in milliseconds to wait to connect to the remote endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.read-timeout]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.read-timeout[quarkus.rest-client."config-key".read-timeout]`

[.description]
--
Timeout specified in milliseconds to wait for a response from the remote endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.follow-redirects]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.follow-redirects[quarkus.rest-client."config-key".follow-redirects]`

[.description]
--
A boolean value used to determine whether the client should follow HTTP redirect responses.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__FOLLOW_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__FOLLOW_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.proxy-address]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.proxy-address[quarkus.rest-client."config-key".proxy-address]`

[.description]
--
A string value in the form of `:` that specifies the HTTP proxy server hostname (or IP address) and port for requests of this client to use. Use `none` to disable proxy

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.proxy-user]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.proxy-user[quarkus.rest-client."config-key".proxy-user]`

[.description]
--
Proxy username. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_USER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_USER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.proxy-password]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.proxy-password[quarkus.rest-client."config-key".proxy-password]`

[.description]
--
Proxy password. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.non-proxy-hosts]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.non-proxy-hosts[quarkus.rest-client."config-key".non-proxy-hosts]`

[.description]
--
Hosts to access without proxy This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__NON_PROXY_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__NON_PROXY_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.query-param-style]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.query-param-style[quarkus.rest-client."config-key".query-param-style]`

[.description]
--
An enumerated type string value with possible values of "MULTI_PAIRS" (default), "COMMA_SEPARATED", or "ARRAY_PAIRS" that specifies the format in which multiple values for the same query parameter is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__QUERY_PARAM_STYLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__QUERY_PARAM_STYLE+++`
endif::add-copy-button-to-env-var[]
-- a|
`multi-pairs`, `comma-separated`, `array-pairs` 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.trust-store]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.trust-store[quarkus.rest-client."config-key".trust-store]`

[.description]
--
The trust store location. Can point to either a classpath resource or a file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.trust-store-password]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.trust-store-password[quarkus.rest-client."config-key".trust-store-password]`

[.description]
--
The trust store password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.trust-store-type]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.trust-store-type[quarkus.rest-client."config-key".trust-store-type]`

[.description]
--
The type of the trust store. Defaults to "JKS".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.key-store]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.key-store[quarkus.rest-client."config-key".key-store]`

[.description]
--
The key store location. Can point to either a classpath resource or a file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.key-store-password]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.key-store-password[quarkus.rest-client."config-key".key-store-password]`

[.description]
--
The key store password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.key-store-type]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.key-store-type[quarkus.rest-client."config-key".key-store-type]`

[.description]
--
The type of the key store. Defaults to "JKS".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__KEY_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.hostname-verifier]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.hostname-verifier[quarkus.rest-client."config-key".hostname-verifier]`

[.description]
--
The class name of the host name verifier. The class must have a public no-argument constructor.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__HOSTNAME_VERIFIER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__HOSTNAME_VERIFIER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.connection-ttl]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.connection-ttl[quarkus.rest-client."config-key".connection-ttl]`

[.description]
--
The time in ms for which a connection remains unused in the connection pool before being evicted and closed. A timeout of `0` means there is no timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECTION_TTL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECTION_TTL+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.connection-pool-size]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.connection-pool-size[quarkus.rest-client."config-key".connection-pool-size]`

[.description]
--
The size of the connection pool for this client.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECTION_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__CONNECTION_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.max-redirects]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.max-redirects[quarkus.rest-client."config-key".max-redirects]`

[.description]
--
The maximum number of redirection a request can follow. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__MAX_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__MAX_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.headers-headers]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.headers-headers[quarkus.rest-client."config-key".headers]`

[.description]
--
The HTTP headers that should be applied to all requests of the rest client. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__HEADERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.shared]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.shared[quarkus.rest-client."config-key".shared]`

[.description]
--
Set to true to share the HTTP client between REST clients. There can be multiple shared clients distinguished by *name*, when no specific name is set, the name `__vertx.DEFAULT` is used. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.name]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.name[quarkus.rest-client."config-key".name]`

[.description]
--
Set the HTTP client name, used when the client is shared, otherwise ignored. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.user-agent]]`link:#quarkus-restclient-config-rest-client-config_quarkus.rest-client.-config-key-.user-agent[quarkus.rest-client."config-key".user-agent]`

[.description]
--
Configure the HTTP user-agent header to use. This property is applicable to reactive REST clients only.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REST_CLIENT__CONFIG_KEY__USER_AGENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REST_CLIENT__CONFIG_KEY__USER_AGENT+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===